[package]
name = "authenticationpage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
argon2 = "0.5"
rand = "0.8"
serde_json = "1.0"
regex = "1.10"
dotenvy = "0.15.7"
tower_governor = "0.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
sha2 = "0.10"
askama = "0.15.6"
